working keyword search

--- a/K_Means_Sandbox.ipynb
+++ b/K_Means_Sandbox.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 62,
    "metadata": {
     "collapsed": true
    },
@@ -13,7 +13,9 @@
     "from sklearn.cluster import KMeans\n",
     "from sklearn.decomposition import PCA\n",
     "from gensim import similarities\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import pickle"
    ]
   },
   {
@@ -153,14 +155,528 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "pd.to_pi"
+    "# save output\n",
+    "with open('pkl/kmeans_100_PCA_reduced.pkl', 'w') as f:\n",
+    "    pickle.dump([reduced_data, labels, centroids], f)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "pca_df = pd.DataFrame({'x_coord' : reduced_data[:,0],\n",
+    "                       'y_coord' : reduced_data[:,1]})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "pca_df.to_pickle('pkl/pca_df.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "pca_df['top'] = [False] * pca_df.shape[0]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>x_coord</th>\n",
+       "      <th>y_coord</th>\n",
+       "      <th>top</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.052626</td>\n",
+       "      <td>0.127376</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-0.001716</td>\n",
+       "      <td>-0.098834</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-0.044865</td>\n",
+       "      <td>0.038217</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.013147</td>\n",
+       "      <td>0.215778</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-0.244042</td>\n",
+       "      <td>-0.104374</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.099897</td>\n",
+       "      <td>-0.186955</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0.094753</td>\n",
+       "      <td>-0.161241</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>-0.081455</td>\n",
+       "      <td>-0.126088</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>0.150456</td>\n",
+       "      <td>-0.458489</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>0.105474</td>\n",
+       "      <td>-0.209775</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>-0.500910</td>\n",
+       "      <td>-0.197254</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>0.151234</td>\n",
+       "      <td>-0.248284</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>0.345012</td>\n",
+       "      <td>0.124476</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>0.245712</td>\n",
+       "      <td>-0.455253</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>0.230197</td>\n",
+       "      <td>-0.087964</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>-0.453879</td>\n",
+       "      <td>-0.151522</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>-0.410336</td>\n",
+       "      <td>-0.163026</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>0.111851</td>\n",
+       "      <td>-0.342034</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>0.001381</td>\n",
+       "      <td>0.106519</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>0.318600</td>\n",
+       "      <td>-0.034788</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>0.222935</td>\n",
+       "      <td>0.170856</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>-0.005566</td>\n",
+       "      <td>-0.038977</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>-0.506658</td>\n",
+       "      <td>-0.242246</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>-0.355750</td>\n",
+       "      <td>0.025036</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>-0.325820</td>\n",
+       "      <td>-0.329939</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>-0.177822</td>\n",
+       "      <td>0.048632</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>-0.319791</td>\n",
+       "      <td>0.022228</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>-0.104583</td>\n",
+       "      <td>-0.294907</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>0.066856</td>\n",
+       "      <td>-0.136603</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>0.124078</td>\n",
+       "      <td>-0.372726</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5774</th>\n",
+       "      <td>-0.148332</td>\n",
+       "      <td>0.164307</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5775</th>\n",
+       "      <td>0.150686</td>\n",
+       "      <td>0.010350</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5776</th>\n",
+       "      <td>0.020115</td>\n",
+       "      <td>0.130172</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5777</th>\n",
+       "      <td>-0.200249</td>\n",
+       "      <td>0.095259</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5778</th>\n",
+       "      <td>-0.569001</td>\n",
+       "      <td>-0.249924</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5779</th>\n",
+       "      <td>0.349056</td>\n",
+       "      <td>0.135884</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5780</th>\n",
+       "      <td>-0.515960</td>\n",
+       "      <td>-0.286889</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5781</th>\n",
+       "      <td>0.058057</td>\n",
+       "      <td>0.180351</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5782</th>\n",
+       "      <td>0.064640</td>\n",
+       "      <td>0.288863</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5783</th>\n",
+       "      <td>0.097927</td>\n",
+       "      <td>0.083734</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5784</th>\n",
+       "      <td>0.340546</td>\n",
+       "      <td>-0.097567</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5785</th>\n",
+       "      <td>0.188395</td>\n",
+       "      <td>-0.310287</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5786</th>\n",
+       "      <td>-0.218370</td>\n",
+       "      <td>0.158722</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5787</th>\n",
+       "      <td>-0.499964</td>\n",
+       "      <td>-0.325254</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5788</th>\n",
+       "      <td>-0.223574</td>\n",
+       "      <td>-0.215391</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5789</th>\n",
+       "      <td>0.179808</td>\n",
+       "      <td>-0.188610</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5790</th>\n",
+       "      <td>0.056670</td>\n",
+       "      <td>-0.265280</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5791</th>\n",
+       "      <td>-0.475374</td>\n",
+       "      <td>-0.273326</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5792</th>\n",
+       "      <td>-0.379316</td>\n",
+       "      <td>-0.206822</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5793</th>\n",
+       "      <td>0.086442</td>\n",
+       "      <td>0.177035</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5794</th>\n",
+       "      <td>0.032640</td>\n",
+       "      <td>0.103105</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5795</th>\n",
+       "      <td>0.025121</td>\n",
+       "      <td>0.126497</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5796</th>\n",
+       "      <td>-0.175835</td>\n",
+       "      <td>-0.067901</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5797</th>\n",
+       "      <td>0.145602</td>\n",
+       "      <td>-0.507485</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5798</th>\n",
+       "      <td>-0.296154</td>\n",
+       "      <td>0.376334</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5799</th>\n",
+       "      <td>-0.414192</td>\n",
+       "      <td>-0.100037</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5800</th>\n",
+       "      <td>-0.373175</td>\n",
+       "      <td>0.016424</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5801</th>\n",
+       "      <td>-0.426778</td>\n",
+       "      <td>-0.103767</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5802</th>\n",
+       "      <td>0.364454</td>\n",
+       "      <td>-0.160604</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5803</th>\n",
+       "      <td>-0.277186</td>\n",
+       "      <td>-0.099322</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5804 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       x_coord   y_coord    top\n",
+       "0     0.052626  0.127376   True\n",
+       "1    -0.001716 -0.098834   True\n",
+       "2    -0.044865  0.038217   True\n",
+       "3     0.013147  0.215778   True\n",
+       "4    -0.244042 -0.104374   True\n",
+       "5     0.099897 -0.186955   True\n",
+       "6     0.094753 -0.161241   True\n",
+       "7    -0.081455 -0.126088   True\n",
+       "8     0.150456 -0.458489   True\n",
+       "9     0.105474 -0.209775   True\n",
+       "10   -0.500910 -0.197254   True\n",
+       "11    0.151234 -0.248284   True\n",
+       "12    0.345012  0.124476   True\n",
+       "13    0.245712 -0.455253   True\n",
+       "14    0.230197 -0.087964   True\n",
+       "15   -0.453879 -0.151522   True\n",
+       "16   -0.410336 -0.163026   True\n",
+       "17    0.111851 -0.342034   True\n",
+       "18    0.001381  0.106519   True\n",
+       "19    0.318600 -0.034788   True\n",
+       "20    0.222935  0.170856   True\n",
+       "21   -0.005566 -0.038977   True\n",
+       "22   -0.506658 -0.242246   True\n",
+       "23   -0.355750  0.025036   True\n",
+       "24   -0.325820 -0.329939   True\n",
+       "25   -0.177822  0.048632   True\n",
+       "26   -0.319791  0.022228   True\n",
+       "27   -0.104583 -0.294907   True\n",
+       "28    0.066856 -0.136603   True\n",
+       "29    0.124078 -0.372726   True\n",
+       "...        ...       ...    ...\n",
+       "5774 -0.148332  0.164307  False\n",
+       "5775  0.150686  0.010350  False\n",
+       "5776  0.020115  0.130172  False\n",
+       "5777 -0.200249  0.095259  False\n",
+       "5778 -0.569001 -0.249924  False\n",
+       "5779  0.349056  0.135884  False\n",
+       "5780 -0.515960 -0.286889  False\n",
+       "5781  0.058057  0.180351  False\n",
+       "5782  0.064640  0.288863  False\n",
+       "5783  0.097927  0.083734  False\n",
+       "5784  0.340546 -0.097567  False\n",
+       "5785  0.188395 -0.310287  False\n",
+       "5786 -0.218370  0.158722  False\n",
+       "5787 -0.499964 -0.325254  False\n",
+       "5788 -0.223574 -0.215391  False\n",
+       "5789  0.179808 -0.188610  False\n",
+       "5790  0.056670 -0.265280  False\n",
+       "5791 -0.475374 -0.273326  False\n",
+       "5792 -0.379316 -0.206822  False\n",
+       "5793  0.086442  0.177035  False\n",
+       "5794  0.032640  0.103105  False\n",
+       "5795  0.025121  0.126497  False\n",
+       "5796 -0.175835 -0.067901  False\n",
+       "5797  0.145602 -0.507485  False\n",
+       "5798 -0.296154  0.376334  False\n",
+       "5799 -0.414192 -0.100037  False\n",
+       "5800 -0.373175  0.016424  False\n",
+       "5801 -0.426778 -0.103767  False\n",
+       "5802  0.364454 -0.160604  False\n",
+       "5803 -0.277186 -0.099322  False\n",
+       "\n",
+       "[5804 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pca_df.loc[:100, 'top'] = True\n",
+    "pca_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
