fix recovered file

--- a/03_iTunes_Scrape.ipynb
+++ b/03_iTunes_Scrape.ipynb
@@ -79,11 +79,8 @@
     {
      "data": {
       "text/plain": [
-<<<<<<< HEAD
        "(6211, 36)"
-=======
-       "(6217, 36)"
->>>>>>> origin/master
+
       ]
      },
      "execution_count": 4,
@@ -614,7 +611,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 13,
    "metadata": {
     "collapsed": false
@@ -1013,9 +1009,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-=======
-   "execution_count": null,
->>>>>>> origin/master
    "metadata": {
     "collapsed": false
    },
@@ -1024,7 +1017,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-<<<<<<< HEAD
       " 13%|█▎        | 152/1141 [07:58<50:35,  3.07s/it]//anaconda/lib/python2.7/site-packages/unidecode/__init__.py:50: RuntimeWarning: Surrogate character u'\\ud83d' will be ignored. You might be using a narrow Python build.\n",
       "  return _unidecode(string)\n",
       "//anaconda/lib/python2.7/site-packages/unidecode/__init__.py:50: RuntimeWarning: Surrogate character u'\\ude00' will be ignored. You might be using a narrow Python build.\n",
@@ -1050,10 +1042,8 @@
       "\u001b[0;32m//anaconda/lib/python2.7/site-packages/BeautifulSoup.pyc\u001b[0m in \u001b[0;36munknown_starttag\u001b[0;34m(self, name, attrs, selfClosing)\u001b[0m\n\u001b[1;32m   1345\u001b[0m             \u001b[0;32mreturn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1346\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1347\u001b[0;31m         \u001b[0mtag\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mTag\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mattrs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcurrentTag\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprevious\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1348\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprevious\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1349\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprevious\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnext\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtag\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m//anaconda/lib/python2.7/site-packages/BeautifulSoup.pyc\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, parser, name, attrs, parent, previous)\u001b[0m\n\u001b[1;32m    560\u001b[0m                                           \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_convertEntities\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    561\u001b[0m                                           val))\n\u001b[0;32m--> 562\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mattrs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconvert\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mattrs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    563\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    564\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mgetString\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m//anaconda/lib/python2.7/site-packages/BeautifulSoup.pyc\u001b[0m in \u001b[0;36m<lambda>\u001b[0;34m(***failed resolving arguments***)\u001b[0m\n\u001b[1;32m    556\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    557\u001b[0m         \u001b[0;31m# Convert any HTML, XML, or numeric entities in the attribute values.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 558\u001b[0;31m         convert = lambda(k, val): (k,\n\u001b[0m\u001b[1;32m    559\u001b[0m                                    re.sub(\"&(#\\d+|#x[0-9a-fA-F]+|\\w+);\",\n\u001b[1;32m    560\u001b[0m                                           \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_convertEntities\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-=======
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: ",
       "  1%|          | 30/3632 [01:43<4:20:33,  4.34s/it]"
->>>>>>> origin/master
      ]
     }
    ],
@@ -1135,7 +1125,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": null,
    "metadata": {
     "collapsed": true
@@ -2096,8 +2085,6 @@
   },
   {
    "cell_type": "code",
-=======
->>>>>>> origin/master
    "execution_count": null,
    "metadata": {
     "collapsed": true
