re-create simserver (again)

--- a/Setup_Simserver.ipynb
+++ b/Setup_Simserver.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -38,6 +38,79 @@
    "source": [
     "# load pre-processed text\n",
     "preproc_text = pd.read_pickle('gensim/preprocessed_text_v2.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>language</th>\n",
+       "      <th>text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>16392</td>\n",
+       "      <td>English</td>\n",
+       "      <td>[host, review, favorit, favorit, classic, pro,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>18489</td>\n",
+       "      <td>English</td>\n",
+       "      <td>[everyon, need, hope, everyon, need, encourag,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>12350</td>\n",
+       "      <td>English</td>\n",
+       "      <td>[insur, news, interview, rate, announc, insur,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>12351</td>\n",
+       "      <td>English</td>\n",
+       "      <td>[amovetv, crew, talk, video, game, esport, lot...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>12352</td>\n",
+       "      <td>English</td>\n",
+       "      <td>[pastor, greg, lauri, thirtyminut, daili, radi...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      id language                                               text\n",
+       "0  16392  English  [host, review, favorit, favorit, classic, pro,...\n",
+       "0  18489  English  [everyon, need, hope, everyon, need, encourag,...\n",
+       "0  12350  English  [insur, news, interview, rate, announc, insur,...\n",
+       "0  12351  English  [amovetv, crew, talk, video, game, esport, lot...\n",
+       "0  12352  English  [pastor, greg, lauri, thirtyminut, daili, radi..."
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preproc_text.head()"
    ]
   },
   {
